# seawarfare-py

./: README.md  requirements.txt  setup.cfg  setup.py
scripts/: format.sh  lint.sh
src/seawarfare/: location.py  main.py  movable.py  order.py  simulation.py
tests/: test_location.py  test_movable.py  test_order.py  test_simulation.py
