[metadata]
name = seawarfare
version = 0.0.1
description = Seawarfare Simulation in Python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir = =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    seawarfare=seawarfare.main:main

[tool:pytest]
testpaths = tests
addopts =
    --tb=short
    --strict-config
    --strict-markers
    -ra
xfail_strict = true

[coverage:run]
source = seawarfare, tests
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
    raise NotImplementedError
    @(abc\.)?abstractmethod
skip_covered = True

[flake8]
max-line-length = 88
max-complexity = 10
select = C,E,F,W,B,B9
ignore =
    E203, # whitespace before ':'
    E501, # line length
    W503, # line break before binary operator

[mypy]
ignore_missing_imports = True
follow_imports = silent
check_untyped_defs = True
disallow_incomplete_defs = True
warn_unreachable = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
show_error_codes = True

[isort]
profile = black
